trunk/Archive2/e2/13f69d763eebcb/output
main.cpp: In function 'int main()':
main.cpp:7:16: error: cannot convert 'int*' to 'int**' in initialization
     int **p2 = p;
                ^
main.cpp:9:25: warning: format '%p' expects argument of type 'void*', but argument 2 has type 'int**' [-Wformat=]
     printf("val: %p", p2);
                         ^
